--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="CareAfrica - Wildlife Conservation Education Platform"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <title>CareAfrica - Wildlife Conservation Education</title>
   </head>
   <body>
